--- a/src/style/terminal.css
+++ b/src/style/terminal.css
@@ -1,7 +1,7 @@
 :root {
     --main-bg: url(../forest.jpg);
     --prompt-bg-color: #262626;
-    --text-color: #E3B23C;
+    --text-color: #5FD068;
 }
 
 * {
