change color of the background

--- a/src/style/terminal.css
+++ b/src/style/terminal.css
@@ -1,6 +1,6 @@
 :root {
     --main-bg: url(../forest.jpg);
-    --prompt-bg-color: #262626;
+    --prompt-bg-color: #212a2c;
     --text-color: #5FD068;
 }
 
